don't remove z-index or evt, just fixed again!

--- a/CI536-group-project-main/CI536/css/loginsignup.css
+++ b/CI536-group-project-main/CI536/css/loginsignup.css
@@ -63,6 +63,7 @@ input {
 #logo {
     margin-bottom: -0.8rem;
     cursor: pointer;
+    z-index:1;
 }
 
 .container {
